--- a/conf/classes/messages.properties
+++ b/conf/classes/messages.properties
@@ -117,8 +117,8 @@ businessTheme.nameTooLong = Theme name cannot be over 20 characters long.
 # webwork messages
 
 # remember to change the build number to menu.tag
-webwork.agilefantVersionNumber = 1.6 RC 2
-webwork.agilefantReleaseId = agilefant_rev_2165
+webwork.agilefantVersionNumber = 1.6
+webwork.agilefantReleaseId = agilefant_rev_2339
 webwork.date.format = yyyy-MM-dd
 webwork.dateTime.format = yyyy-MM-dd HH:mm:ss
 webwork.shortDateTime.format = yyyy-MM-dd HH:mm
