+ bug fixes + 1.6.1 release notes
git-svn-id: http://www.agilefant.org/svn/agilefant/branches/Evoluzione1_6@2394 08463949-8d1f-0410-9db9-d90bfe3171f5

--- a/doc/Release_notes.txt
+++ b/doc/Release_notes.txt
@@ -54,6 +54,11 @@ Timesheets
   + log spent effort to projects and/or individual backlog items
   + generate reports of spent effort
 
+CHANGES FROM AGILEFANT 1.6
+----------------------------
++ Fixed creating a new task/story from the create new link
++ Fixed multiple configuration issues on non-Windows environments
+
 CHANGES FROM AGILEFANT 1.5.5
 ----------------------------
 + Renovation of the iteration view (give us feedback at the forum!)
